syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "TransactionResponse.proto";
import "QueryHeader.proto";
import "ResponseCode.proto";

/* Every query receives a response containing the QueryResponseHeader. Either or both of the cost and stateProof fields may be blank, if the responseType didn��t ask for the cost or stateProof. */
message ResponseHeader {
    ResponseCodeEnum nodeTransactionPrecheckCode = 1; // result of fee transaction precheck, saying it passed, or why it failed
    ResponseType responseType = 2; // the requested response is repeated back here, for convenience
    uint64 cost = 3; // the fee that would be charged to get the requested information (if a cost was requested)
    bytes stateProof = 4; // the state proof for this information (if a state proof was requested, and is available)
}
